@@ -1,3 +1,8 @@
+2019-10-24  Jakub Jelinek  <jakub@redhat.com>
+
+	* call.c (convert_arg_to_ellipsis): Add missing space in string
+	literal.
+
 2019-10-24  Marek Polacek  <polacek@redhat.com>
 
 	* decl.c (reshape_init_r): Add missing space.
